--- a/app/src/main/res/layout/dialog_detail_evento.xml
+++ b/app/src/main/res/layout/dialog_detail_evento.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:scrollbars="vertical"
     android:scrollbarFadeDuration="2000"
-    tools:context=".RegistroEventoActivity">
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvRegDetDiagTitulo"
+            android:id="@+id/tvEvtDetDiagTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Título"
@@ -29,13 +29,13 @@
             android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvRegDetDiagTipo"
+                    android:id="@+id/tvEvtDetDiagTipo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:text="Tipo"
                     style="@style/regViewStyle"/>
                 <TextView
-                    android:id="@+id/tvRegDetDiagRecorrencia"
+                    android:id="@+id/tvEvtDetDiagRecorrencia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:text="Recorrencia"
@@ -47,13 +47,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvRegDetDiagData"
+                    android:id="@+id/tvEvtDetDiagData"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="DD/MM/AAAA"
                     style="@style/regViewStyle"/>
                 <TextView
-                    android:id="@+id/tvRegDetDiagHora"
+                    android:id="@+id/tvEvtDetDiagHora"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="HH:MM"
@@ -61,7 +61,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tvRegDetDiagDescricao"
+                android:id="@+id/tvEvtDetDiagDescricao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Descrição"
