--- a/app/src/main/res/layout/activity_registro_local.xml
+++ b/app/src/main/res/layout/activity_registro_local.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:scrollbarFadeDuration="2000"
-        tools:context=".RegistroLocalizacaoActivity">
+        tools:context=".RegistroLocalActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,8 +65,8 @@
                             android:layout_margin="8dp"
                             android:padding="16dp"
                             android:textSize="24sp"
-                            android:inputType="numberDecimal"
-                            android:digits="-"
+                            android:inputType="number"
+                            android:digits="-0.123456789"
                             android:hint="@string/hint_etRegLocActLatitude"
                             tools:ignore="Autofill" />
                         <EditText
