--- a/app/src/main/res/layout/activity_calendario_solar.xml
+++ b/app/src/main/res/layout/activity_calendario_solar.xml
@@ -36,49 +36,11 @@
                 android:popupTheme="@style/selectInputStyle"
                 android:theme="@style/selectInputStyle"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvCalSolarActNascente"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="5:57"
-                    style="@style/regViewStyle"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_sol"
-                    tools:ignore="ContentDescription" />
-
-                <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/logo_oct"
-                    tools:ignore="ContentDescription" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_lua"
-                    tools:ignore="ContentDescription" />
-                <TextView
-                    android:id="@+id/tvCalSolarActPoente"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="6:07"
-                    style="@style/regViewStyle"/>
-            </LinearLayout>
-
             <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                 android:id="@+id/mcvCalSolarAct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp"
                 app:mcv_headerTextAppearance="@style/calendarStyle"
                 app:mcv_weekDayTextAppearance="@style/calendarWeekDayStyle"
                 app:mcv_dateTextAppearance="@style/calendarStyle"
