--- a/app/src/main/res/layout/activity_calendario_evento.xml
+++ b/app/src/main/res/layout/activity_calendario_evento.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
-                android:entries="@array/tipo_registro"
+                android:entries="@array/array_tipos_registro"
                 android:popupTheme="@style/selectInputStyle"
                 android:theme="@style/selectInputStyle"/>
 
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:entries="@array/tipo_registro"
+                android:entries="@array/array_tipos_registro"
                 android:popupTheme="@style/selectInputStyle"
                 android:theme="@style/selectInputStyle"/>
 
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginBottom="8dp"
-                android:entries="@array/tipo_registro"
+                android:entries="@array/array_tipos_registro"
                 android:popupTheme="@style/selectInputStyle"
                 android:theme="@style/selectInputStyle"/>
         </LinearLayout>
