--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,30 +68,18 @@
                         android:id="@+id/tvMainNascente"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="24sp"
                         tools:text="Nascer do Sol"/>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_sol"
-                        tools:ignore="ContentDescription" />
-
                     <ImageView
                         android:layout_width="64dp"
                         android:layout_height="64dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:src="@drawable/logo_oct"
-                        tools:ignore="ContentDescription" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_baseline_lua"
+                        android:src="@drawable/horizonte"
                         tools:ignore="ContentDescription" />
                     <TextView
                         android:id="@+id/tvMainPoente"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="24sp"
                         tools:text="Pôr do Sol"/>
                 </LinearLayout>
             </LinearLayout>
