Modificado o AlarmManager para um WorkManager e adaptado a lógica de notificação Adicionado a formatação do minuto para ser registrado sempre com 2 digitos Adicionado um lembrete estático(sem projeção)

--- a/app/src/main/res/layout/activity_calendario_evento.xml
+++ b/app/src/main/res/layout/activity_calendario_evento.xml
@@ -44,6 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
+                android:visibility="gone"
                 android:entries="@array/array_tipos_registro"
                 android:popupTheme="@style/selectInputStyle"
                 android:theme="@style/selectInputStyle"/>
@@ -53,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:visibility="gone"
                 android:entries="@array/array_tipos_registro"
                 android:popupTheme="@style/selectInputStyle"
                 android:theme="@style/selectInputStyle"/>
@@ -63,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginBottom="8dp"
+                android:visibility="gone"
                 android:entries="@array/array_tipos_registro"
                 android:popupTheme="@style/selectInputStyle"
                 android:theme="@style/selectInputStyle"/>
